@@ -8632,6 +8632,8 @@ gimple_regimplify_operands (gimple stmt, gimple_stmt_iterator *gsi_p)
     gsi_insert_after (gsi_p, post_stmt, GSI_NEW_STMT);
 
   pop_gimplify_context (NULL);
+
+  update_stmt (stmt);
 }
 
 /* Expand EXPR to list of gimple statements STMTS.  GIMPLE_TEST_F specifies
